--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         .img_div img{
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ensure the image covers the entire container */
-            object-position: center top; 
+            object-fit: fill; /* Ensure the image covers the entire container */
+/*             object-position: center top;  */
         }
     </style>
 </head>
