--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ li {
             height:100%;
             position:absolute;
             overflow: hidden;
+            z-index:-5;
         }
         .img_div img{
             width: 100%;
