--- a/index.html
+++ b/index.html
@@ -6,31 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-div,
-span,
-a,
-ul,
-ol,
-li {
-  margin: 0;
-  padding: 0;
-}
-
-*,
+        *{
+            margin:0;
+            padding:0;
+            box-sizing: border-box;
+        }
+        *,
 *::after,
 *::before {
   box-sizing: border-box;
@@ -38,7 +19,8 @@ li {
   font-size: 1.25rem;
 }
         html, body {
-            height: 100%;
+            /* width:100%;
+            height: 100%; */
         }
         .img_div{
             display: flex;
@@ -47,20 +29,260 @@ li {
             width:100%;
             height:100%;
             position:absolute;
-            overflow: hidden;
-            z-index:-5;
+            /* overflow: hidden; */
+            top:0;
         }
         .img_div img{
             width: 100%;
             height: 100%;
             object-fit: fill; /* Ensure the image covers the entire container */
-/*             object-position: center top;  */
+            /* object-position: center top;  */
         }
+
+        .flip-card {
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .2);
+  border-radius: .1em;
+}
+
+.top,
+.bottom,
+.flip-card .top-flip,
+.flip-card .bottom-flip {
+  height: .75em;
+  line-height: 1;
+  padding: .25em;
+  overflow: hidden;
+}
+
+.top,
+.flip-card .top-flip {
+  background-color: #f7f7f7;
+  border-top-right-radius: .1em;
+  border-top-left-radius: .1em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #343650;
+  color: #FF00FF;
+}
+
+.bottom,
+.flip-card .bottom-flip {
+  background-color: white;
+  display: flex;
+  align-items: flex-end;
+  border-bottom-right-radius: .1em;
+  border-bottom-left-radius: .1em;
+  background-color: #343650;
+  color: #FF00FF;
+}
+
+.flip-card .top-flip {
+  position: absolute;
+  width: 100%;
+  animation: flip-top 250ms ease-in;
+  transform-origin: bottom;
+}
+
+@keyframes flip-top {
+  100% {
+    transform: rotateX(90deg);
+  }
+}
+
+.flip-card .bottom-flip {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  animation: flip-bottom 250ms ease-out 250ms;
+  transform-origin: top;
+  transform: rotateX(90deg);
+}
+
+@keyframes flip-bottom {
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+
+.container1 {
+  display: flex;
+  gap: .5em;
+  justify-content: center;
+  width: 60%;
+  margin: auto;
+}
+
+.container-segment {
+  display: flex;
+  flex-direction: column;
+  gap: .1em;
+  align-items: center;
+}
+
+.segment {
+  display: flex;
+  gap: .1em;
+}
+
+.segment-title {
+  font-size: 0.75rem;
+  margin-top: 5px;
+  color: #8486a9;
+}
+
+.main>h1 {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  color: magenta;
+}
+
+.footer {
+  color: #8486a9;
+  font-size: 11px;
+  position: absolute;
+  left: 50%;
+  top: 97%;
+  transform: translate(-50%, -50%);
+
+}
+
+.footer span {
+  color: darkmagenta;
+  font-size: 11px;
+}
+
+.img_surprise_div {
+  display: flex;
+  /* position: absolute; */
+  justify-content: center;
+  align-items: center;
+  /* left: 50%;
+  top: 70%;
+  transform: translate(-50%, -50%); */
+  margin-top: 50px;
+}
+
+.img_surprise_div img {
+  width: 5rem;
+}
+
+.name_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.name_div h1 {
+  color: darkmagenta;
+  font-size: 23px;
+}
+
+.name_div i {
+  color: yellow;
+}
+
+.name_div div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.crown_div {
+  display: flex;
+}
+
+.crown_div svg {
+  width: 1rem;
+  /* color: #FFD700; */
+  color: #FEB300;
+}
+
+.surprise_span {
+  color: darkmagenta;
+  font-size: 20px;
+}
     </style>
 </head>
 <body>
     <div class="img_div">
         <img src="background.jpg" alt="">
     </div>
+    <section class="main">
+        <h1>Countdown to <span class="surprise_span">Birthday Day!!!</span></h1>
+        <div class="container1">
+          <div class="container-segment">
+            <div class="segment">
+              <div class="flip-card" data-days-tens>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+              <div class="flip-card" data-days-ones>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+            </div>
+            <div class="segment-title">Days</div>
+          </div>
+          <div class="container-segment">
+            <div class="segment">
+              <div class="flip-card" data-hours-tens>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+              <div class="flip-card" data-hours-ones>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+            </div>
+            <div class="segment-title">Hours</div>
+          </div>
+          <div class="container-segment">
+            <div class="segment">
+              <div class="flip-card" data-minutes-tens>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+              <div class="flip-card" data-minutes-ones>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+            </div>
+            <div class="segment-title">Minutes</div>
+          </div>
+          <div class="container-segment">
+            <div class="segment">
+              <div class="flip-card" data-seconds-tens>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+              <div class="flip-card" data-seconds-ones>
+                <div class="top">0</div>
+                <div class="bottom">0</div>
+              </div>
+            </div>
+            <div class="segment-title">Seconds</div>
+          </div>
+        </div>
+      </section>
+      <div class="name_div">
+        <div>
+          <div class="crown_div">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+              <path fill="currentColor"
+                d="M309 106c11.4-7 19-19.7 19-34c0-22.1-17.9-40-40-40s-40 17.9-40 40c0 14.4 7.6 27 19 34L209.7 220.6c-9.1 18.2-32.7 23.4-48.6 10.7L72 160c5-6.7 8-15 8-24c0-22.1-17.9-40-40-40S0 113.9 0 136s17.9 40 40 40c.2 0 .5 0 .7 0L86.4 427.4c5.5 30.4 32 52.6 63 52.6H426.6c30.9 0 57.4-22.1 63-52.6L535.3 176c.2 0 .5 0 .7 0c22.1 0 40-17.9 40-40s-17.9-40-40-40s-40 17.9-40 40c0 9 3 17.3 8 24l-89.1 71.3c-15.9 12.7-39.5 7.5-48.6-10.7L309 106z" />
+            </svg>
+          </div>
+          <h1>Vineela</h1>
+        </div>
+      </div>
+      <div class="img_surprise_div">
+        <img src="images/surprise.png" alt="">
+      </div>
+      <p class="footer">Designed by <span>Praveen</span></p>
 </body>
 </html>
