--- a/index.html
+++ b/index.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            margin:0;
-            padding:0;
-            box-sizing: border-box;
-        }
-        *,
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Birthday Surprise</title>
+
+  <link rel="icon" type="image/x-icon" href="images/favicon.png">
+
+  <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+div,
+span,
+a,
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+*,
 *::after,
 *::before {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.25rem;
 }
-        html, body {
-            /* width:100%;
-            height: 100%; */
-        }
-        .img_div{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width:100%;
-            height:100%;
-            position:absolute;
-            /* overflow: hidden; */
-            top:0;
-        }
-        .img_div img{
-            width: 100%;
-            height: 100%;
-            object-fit: fill; /* Ensure the image covers the entire container */
-            /* object-position: center top;  */
-        }
 
-        .flip-card {
+.bg_img_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0;
+  z-index:-5;
+  /* overflow: hidden; */
+
+}
+
+.bg_img_div img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: fill; */
+}
+
+/* body {
+  background-color: #1e1f29;
+} */
+
+.flip-card {
   position: relative;
   display: inline-flex;
   flex-direction: column;
@@ -206,83 +235,86 @@
   color: darkmagenta;
   font-size: 20px;
 }
-    </style>
+    </style>   
 </head>
+
 <body>
-    <div class="img_div">
-        <img src="background.jpg" alt="">
+  <div class="bg_img_div">
+    <img src="images/background.jpg" alt="">
+  </div>
+  <section class="main">
+    <h1>Countdown to <span class="surprise_span">Birthday Day!!!</span></h1>
+    <div class="container1">
+      <div class="container-segment">
+        <div class="segment">
+          <div class="flip-card" data-days-tens>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+          <div class="flip-card" data-days-ones>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+        </div>
+        <div class="segment-title">Days</div>
+      </div>
+      <div class="container-segment">
+        <div class="segment">
+          <div class="flip-card" data-hours-tens>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+          <div class="flip-card" data-hours-ones>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+        </div>
+        <div class="segment-title">Hours</div>
+      </div>
+      <div class="container-segment">
+        <div class="segment">
+          <div class="flip-card" data-minutes-tens>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+          <div class="flip-card" data-minutes-ones>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+        </div>
+        <div class="segment-title">Minutes</div>
+      </div>
+      <div class="container-segment">
+        <div class="segment">
+          <div class="flip-card" data-seconds-tens>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+          <div class="flip-card" data-seconds-ones>
+            <div class="top">0</div>
+            <div class="bottom">0</div>
+          </div>
+        </div>
+        <div class="segment-title">Seconds</div>
+      </div>
     </div>
-    <section class="main">
-        <h1>Countdown to <span class="surprise_span">Birthday Day!!!</span></h1>
-        <div class="container1">
-          <div class="container-segment">
-            <div class="segment">
-              <div class="flip-card" data-days-tens>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-              <div class="flip-card" data-days-ones>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-            </div>
-            <div class="segment-title">Days</div>
-          </div>
-          <div class="container-segment">
-            <div class="segment">
-              <div class="flip-card" data-hours-tens>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-              <div class="flip-card" data-hours-ones>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-            </div>
-            <div class="segment-title">Hours</div>
-          </div>
-          <div class="container-segment">
-            <div class="segment">
-              <div class="flip-card" data-minutes-tens>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-              <div class="flip-card" data-minutes-ones>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-            </div>
-            <div class="segment-title">Minutes</div>
-          </div>
-          <div class="container-segment">
-            <div class="segment">
-              <div class="flip-card" data-seconds-tens>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-              <div class="flip-card" data-seconds-ones>
-                <div class="top">0</div>
-                <div class="bottom">0</div>
-              </div>
-            </div>
-            <div class="segment-title">Seconds</div>
-          </div>
-        </div>
-      </section>
-      <div class="name_div">
-        <div>
-          <div class="crown_div">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-              <path fill="currentColor"
-                d="M309 106c11.4-7 19-19.7 19-34c0-22.1-17.9-40-40-40s-40 17.9-40 40c0 14.4 7.6 27 19 34L209.7 220.6c-9.1 18.2-32.7 23.4-48.6 10.7L72 160c5-6.7 8-15 8-24c0-22.1-17.9-40-40-40S0 113.9 0 136s17.9 40 40 40c.2 0 .5 0 .7 0L86.4 427.4c5.5 30.4 32 52.6 63 52.6H426.6c30.9 0 57.4-22.1 63-52.6L535.3 176c.2 0 .5 0 .7 0c22.1 0 40-17.9 40-40s-17.9-40-40-40s-40 17.9-40 40c0 9 3 17.3 8 24l-89.1 71.3c-15.9 12.7-39.5 7.5-48.6-10.7L309 106z" />
-            </svg>
-          </div>
-          <h1>Vineela</h1>
-        </div>
+  </section>
+  <div class="name_div">
+    <div>
+      <div class="crown_div">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+          <path fill="currentColor"
+            d="M309 106c11.4-7 19-19.7 19-34c0-22.1-17.9-40-40-40s-40 17.9-40 40c0 14.4 7.6 27 19 34L209.7 220.6c-9.1 18.2-32.7 23.4-48.6 10.7L72 160c5-6.7 8-15 8-24c0-22.1-17.9-40-40-40S0 113.9 0 136s17.9 40 40 40c.2 0 .5 0 .7 0L86.4 427.4c5.5 30.4 32 52.6 63 52.6H426.6c30.9 0 57.4-22.1 63-52.6L535.3 176c.2 0 .5 0 .7 0c22.1 0 40-17.9 40-40s-17.9-40-40-40s-40 17.9-40 40c0 9 3 17.3 8 24l-89.1 71.3c-15.9 12.7-39.5 7.5-48.6-10.7L309 106z" />
+        </svg>
       </div>
-      <div class="img_surprise_div">
-        <img src="images/surprise.png" alt="">
-      </div>
-      <p class="footer">Designed by <span>Praveen</span></p>
+      <h1>Vineela</h1>
+    </div>
+  </div>
+  <div class="img_surprise_div">
+    <img src="images/surprise.png" alt="">
+  </div>
+  <p class="footer">Designed by <span>Praveen</span></p>
+  <script src="script.js"></script>
 </body>
+
 </html>
