--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ li {
     </div>
   </div>
   <div class="img_surprise_div">
-    <img src="images/surprise.png" alt="">
+    <img src="surprise.png" alt="">
   </div>
   <p class="footer">Designed by <span>Praveen</span></p>
   <script src="script.js"></script>
