--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ li {
 
 <body>
   <div class="bg_img_div">
-    <img src="images/background.jpg" alt="">
+    <img src="background.jpg" alt="">
   </div>
   <section class="main">
     <h1>Countdown to <span class="surprise_span">Birthday Day!!!</span></h1>
